Criando CMake e estrutura de pastas

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,14 +9,15 @@ project(jvm_boss)
 set(SOURCE_DIR src)
 set(INCLUDE_DIR include)
 
-set(HEADER_fILES
+set(HEADER_FILES
     ${INCLUDE_DIR}/begin.hpp
     ${INCLUDE_DIR}/end.hpp
 )
 
-set(SOURCE_FILES)
+set(SOURCE_FILES
     ${SOURCE_DIR}/begin.cpp
     ${SOURCE_DIR}/end.cpp
+    ${SOURCE_DIR}/main.cpp
 )
 
 # Executable name
