--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,7 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/read_bytes.hpp
     ${INCLUDE_DIR}/file_reader.hpp
     ${INCLUDE_DIR}/cp_info.hpp
+    ${INCLUDE_DIR}/interface_info.hpp
 )
 
 set(SOURCE_FILES
@@ -21,6 +22,7 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/read_bytes.cpp
     ${SOURCE_DIR}/file_reader.cpp
     ${SOURCE_DIR}/cp_info.cpp
+    ${SOURCE_DIR}/interface_info.cpp
 )
 
 # Executable name
