Attribute Info begin

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,8 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/file_reader.hpp
     ${INCLUDE_DIR}/cp_info.hpp
     ${INCLUDE_DIR}/interface_info.hpp
+    ${INCLUDE_DIR}/field_info.hpp
+    ${INCLUDE_DIR}/attribute_info.hpp
 )
 
 set(SOURCE_FILES
@@ -23,6 +25,8 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/file_reader.cpp
     ${SOURCE_DIR}/cp_info.cpp
     ${SOURCE_DIR}/interface_info.cpp
+    ${SOURCE_DIR}/field_info.cpp
+    ${SOURCE_DIR}/attribute_info.cpp
 )
 
 # Executable name
