debug mode done

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
         "type": "cppdbg",
         "request": "launch",
         "program": "${workspaceFolder}/jvm_boss",
-        "args": [],
+        "args": ["-e", "test/HelloJava.class"],
         "stopAtEntry": false,
         "cwd": "${workspaceFolder}",
         "environment": [],
