--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,11 +14,13 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/utils.hpp
     ${INCLUDE_DIR}/read_bytes.hpp
     ${INCLUDE_DIR}/file_reader.hpp
+    ${INCLUDE_DIR}/file_printer.hpp
     ${INCLUDE_DIR}/cp_info.hpp
     ${INCLUDE_DIR}/interface_info.hpp
     ${INCLUDE_DIR}/field_info.hpp
     ${INCLUDE_DIR}/method_info.hpp
     ${INCLUDE_DIR}/attribute_info.hpp
+    ${INCLUDE_DIR}/stack_map_table.hpp
 )
 
 set(SOURCE_FILES
@@ -26,6 +28,7 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/utils.cpp
     ${SOURCE_DIR}/read_bytes.cpp
     ${SOURCE_DIR}/file_reader.cpp
+    ${SOURCE_DIR}/file_printer.cpp
     ${SOURCE_DIR}/cp_info.cpp
     ${SOURCE_DIR}/interface_info.cpp
     ${SOURCE_DIR}/field_info.cpp
