--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,16 +15,16 @@ set(HEADER_FILES
     # ${INCLUDE_DIR}/utils.hpp
     ${INCLUDE_DIR}/read_bytes.hpp
     ${INCLUDE_DIR}/file_reader.hpp
-    # ${INCLUDE_DIR}/file_printer.hpp
+    ${INCLUDE_DIR}/file_printer.hpp
     ${INCLUDE_DIR}/cp_info.hpp
-    # ${INCLUDE_DIR}/interface_info.hpp
-    # ${INCLUDE_DIR}/field_info.hpp
-    # ${INCLUDE_DIR}/method_info.hpp
-    # ${INCLUDE_DIR}/attribute_info.hpp
-    # ${INCLUDE_DIR}/stack_map_table.hpp
-    # ${INCLUDE_DIR}/instruction.hpp
-    ${INCLUDE_DIR}/class_file.hpp
-    ${SOURCE_DIR}/functions.hpp
+    ${INCLUDE_DIR}/interface_info.hpp
+    ${INCLUDE_DIR}/field_info.hpp
+    ${INCLUDE_DIR}/method_info.hpp
+    ${INCLUDE_DIR}/attribute_info.hpp
+    ${INCLUDE_DIR}/stack_map_table.hpp
+    ${INCLUDE_DIR}/instruction.hpp
+   
+    ${INCLUDE_DIR}/functions.hpp
 
 )
 
@@ -33,14 +33,13 @@ set(SOURCE_FILES
     # ${SOURCE_DIR}/utils.cpp
     ${SOURCE_DIR}/read_bytes.cpp
     ${SOURCE_DIR}/file_reader.cpp
-    # ${SOURCE_DIR}/file_printer.cpp
+    ${SOURCE_DIR}/file_printer.cpp
     ${SOURCE_DIR}/cp_info.cpp
-    # ${SOURCE_DIR}/interface_info.cpp
-    # ${SOURCE_DIR}/field_info.cpp
-    # ${SOURCE_DIR}/method_info.cpp
-    # ${SOURCE_DIR}/attribute_info.cpp
-    # ${SOURCE_DIR}/instruction.cpp
-    ${SOURCE_DIR}/class_file.cpp
+    ${SOURCE_DIR}/interface_info.cpp
+    ${SOURCE_DIR}/field_info.cpp
+    ${SOURCE_DIR}/method_info.cpp
+    ${SOURCE_DIR}/attribute_info.cpp
+    ${SOURCE_DIR}/instruction.cpp
     ${SOURCE_DIR}/functions.cpp
 
 )
