file_reader -> class_file
move free memory functions to utils

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,7 +13,7 @@ set(INCLUDE_DIR include)
 set(HEADER_FILES
     ${INCLUDE_DIR}/types.hpp
     ${INCLUDE_DIR}/read_bytes.hpp
-    ${INCLUDE_DIR}/file_reader.hpp
+    ${INCLUDE_DIR}/class_file.hpp
     ${INCLUDE_DIR}/file_printer.hpp
     ${INCLUDE_DIR}/cp_info.hpp
     ${INCLUDE_DIR}/interface_info.hpp
@@ -28,7 +28,7 @@ set(HEADER_FILES
 set(SOURCE_FILES
     ${SOURCE_DIR}/main.cpp
     ${SOURCE_DIR}/read_bytes.cpp
-    ${SOURCE_DIR}/file_reader.cpp
+    ${SOURCE_DIR}/class_file.cpp
     ${SOURCE_DIR}/file_printer.cpp
     ${SOURCE_DIR}/cp_info.cpp
     ${SOURCE_DIR}/interface_info.cpp
