--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -46,5 +46,6 @@
         "typeinfo": "cpp",
         "cstring": "cpp",
         "map": "cpp"
-    }
+    },
+    "C_Cpp.errorSquiggles": "Disabled"
 }
