module: instructions_load

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,8 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/class_loader.hpp
     ${INCLUDE_DIR}/frame.hpp
     ${INCLUDE_DIR}/instructions_func.hpp
-    ${INCLUDE_DIR}/instructions_constants.hpp
+    ${INCLUDE_DIR}/instructions_constant.hpp
+    ${INCLUDE_DIR}/instructions_load.hpp
 )
 
 set(SOURCE_FILES
@@ -48,7 +49,8 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/class_loader.cpp
     ${SOURCE_DIR}/frame.cpp
     ${SOURCE_DIR}/instructions_func.cpp
-    ${SOURCE_DIR}/instructions_constants.cpp
+    ${SOURCE_DIR}/instructions_constant.cpp
+    ${SOURCE_DIR}/instructions_load.cpp
 )
 
 # Executable name
