--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,7 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/instructions_store.hpp
     ${INCLUDE_DIR}/instructions_math.hpp
     ${INCLUDE_DIR}/instructions_stack.hpp
+    ${INCLUDE_DIR}/instructions_conversion.hpp
 )
 
 set(SOURCE_FILES
@@ -57,6 +58,7 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/instructions_store.cpp
     ${SOURCE_DIR}/instructions_math.cpp
     ${SOURCE_DIR}/instructions_stack.cpp
+    ${SOURCE_DIR}/instructions_conversion.cpp
 )
 
 # Executable name
