--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,10 +13,10 @@
     },
     {
       "name": "(gdb) Launch",
-      "type": "cppdbg",
+      "type": "cppdbg", 
       "request": "launch",
       "program": "${workspaceFolder}/jvm_boss",
-      "args": ["-i", "test/OurMulti.class"],
+      "args": ["-i", "test//class/multi.class"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
