--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,7 @@
       "type": "cppdbg", 
       "request": "launch",
       "program": "${workspaceFolder}/jvm_boss",
-      "args": ["-i", "test//class/multi.class"],
+      "args": ["-i", "test//class/Multiply.class"],
       "stopAtEntry": false,
       "cwd": "${workspaceFolder}",
       "environment": [],
