--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,7 +22,7 @@ set(HEADER_FILES
     ${INCLUDE_DIR}/method_info.hpp
     ${INCLUDE_DIR}/attribute_info.hpp
     ${INCLUDE_DIR}/stack_map_table.hpp
-    ${INCLUDE_DIR}/instruction.hpp
+    ${INCLUDE_DIR}/instructions_print.hpp
     ${INCLUDE_DIR}/utils.hpp
     ${INCLUDE_DIR}/interpreter.hpp
     ${INCLUDE_DIR}/frame.hpp
@@ -50,7 +50,7 @@ set(SOURCE_FILES
     ${SOURCE_DIR}/field_info.cpp
     ${SOURCE_DIR}/method_info.cpp
     ${SOURCE_DIR}/attribute_info.cpp
-    ${SOURCE_DIR}/instruction.cpp
+    ${SOURCE_DIR}/instructions_print.cpp
     ${SOURCE_DIR}/utils.cpp
     ${SOURCE_DIR}/interpreter.cpp
     ${SOURCE_DIR}/frame.cpp
